--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,15 +13,14 @@
       <ul>
         <li><a href="{{ '/' | relative_url }}">Home</a></li>
         <li><a href="{{ '/index.md' | relative_url }}">Overview</a></li>
-        <li><a href="{{ '/gittree.md' | relative_url }}">Git</a></li>
-        <li><a href="{{ '/dockertree.md' | relative_url }}">Docker</a></li>
+        <!-- <li><a href="{{ '/repos.md' | relative_url }}">Repos</a></li> -->
+        <!-- <li><a href="{{ '/boards.md' | relative_url }}">Boards</a></li> -->
+        <!-- <li><a href="{{ '/pipelines.md' | relative_url }}">Pipelines</a></li>
         <li><a href="{{ '/kubernetestree.md' | relative_url }}">Kubernetes</a></li>
-        <li><a href="{{ '/maventree.md' | relative_url }}">Maven</a></li>
-        <li><a href="{{ '/pythontree.md' | relative_url }}">Python</a></li>
-        <li><a href="{{ '/linuxtree.md' | relative_url }}">Linux</a></li>
-        <li><a href="{{ '/azurekeyvault.md' | relative_url }}">Azure Key Vault</a></li>
+        <li><a href="{{ '/artifacts.md' | relative_url }}">Artifacts</a></li>
+        <li><a href="{{ '/azurekeyvault.md' | relative_url }}">Key Vault</a></li>
         <li><a href="{{ '/sonarqubetree.md' | relative_url }}">SonarQube</a></li>
-        <li><a href="{{ '/tree.md' | relative_url }}">Tree Diagram</a></li>
+        <li><a href="{{ '/tree.md' | relative_url }}">Tree Diagram</a></li> -->
       </ul>
     </nav>
   </header>
