update git with html,

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,11 +8,11 @@
 </head>
 <body>
   <header>
-    <h1><a href="{{ '/' | relative_url }}">{{ site.title }}</a></h1>
+    <!-- <h1><a href="{{ '/' | relative_url }}">{{ site.title }}</a></h1> -->
     <nav>
       <ul>
-        <li><a href="{{ '/' | relative_url }}">Home</a></li>
-        <li><a href="{{ '/index.md' | relative_url }}">Overview</a></li>
+        <!-- <li><a href="{{ '/' | relative_url }}">Home</a></li> -->
+        <!-- <li><a href="{{ '/index.md' | relative_url }}">Overview</a></li> -->
         <!-- <li><a href="{{ '/repos.md' | relative_url }}">Repos</a></li> -->
         <!-- <li><a href="{{ '/boards.md' | relative_url }}">Boards</a></li> -->
         <!-- <li><a href="{{ '/pipelines.md' | relative_url }}">Pipelines</a></li>
