update git with html,

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -8,10 +8,10 @@
 </head>
 <body>
   <header>
-    <!-- <h1><a href="{{ '/' | relative_url }}">{{ site.title }}</a></h1> -->
+    <h1><a href="{{ '/' | relative_url }}">{{ site.title }}</a></h1>
     <nav>
       <ul>
-        <!-- <li><a href="{{ '/' | relative_url }}">Home</a></li> -->
+        <li><a href="{{ '/' | relative_url }}">Home</a></li> -->
         <!-- <li><a href="{{ '/index.md' | relative_url }}">Overview</a></li> -->
         <!-- <li><a href="{{ '/repos.md' | relative_url }}">Repos</a></li> -->
         <!-- <li><a href="{{ '/boards.md' | relative_url }}">Boards</a></li> -->
@@ -20,7 +20,7 @@
         <li><a href="{{ '/artifacts.md' | relative_url }}">Artifacts</a></li>
         <li><a href="{{ '/azurekeyvault.md' | relative_url }}">Key Vault</a></li>
         <li><a href="{{ '/sonarqubetree.md' | relative_url }}">SonarQube</a></li>
-        <li><a href="{{ '/tree.md' | relative_url }}">Tree Diagram</a></li> -->
+        <li><a href="{{ '/tree.md' | relative_url }}">Tree Diagram</a></li>
       </ul>
     </nav>
   </header>
@@ -31,4 +31,4 @@
     <p>© {{ site.time | date: "%Y" }} {{ site.title }}. All rights reserved.</p>
   </footer>
 </body>
-</html>
+</html> -->
